deployment/melee-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: melee-server-service
  labels:
    app: melee-server-app
spec:
  selector:
    app: melee-server-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
